@@ -137,7 +137,7 @@ class fulltext_search
 			$relyOnIndex = true;
 			foreach ($subwords as $subword)
 			{
-				if ((strlen($subword) >= $this->min_word_length) && !in_array($subword, $this->bannedWords))
+				if (($smcFunc['strlen']($subword) >= $this->min_word_length) && !in_array($subword, $this->bannedWords))
 				{
 					$wordsSearch['indexed_words'][] = $subword;
 					if ($isExcluded)
