@@ -611,7 +611,7 @@ function RequestMembers()
 		WHERE real_name LIKE {string:search}' . (isset($_REQUEST['buddies']) ? '
 			AND id_member IN ({array_int:buddy_list})' : '') . '
 			AND is_activated IN (1, 11)
-		LIMIT ' . (strlen($_REQUEST['search']) <= 2 ? '100' : '800'),
+		LIMIT ' . ($smcFunc['strlen']($_REQUEST['search']) <= 2 ? '100' : '800'),
 		array(
 			'buddy_list' => $user_info['buddies'],
 			'search' => $_REQUEST['search'],
@@ -734,7 +734,7 @@ function validatePassword($password, $username, $restrict_in = array())
 	global $modSettings, $smcFunc;
 
 	// Perform basic requirements first.
-	if (strlen($password) < (empty($modSettings['password_strength']) ? 4 : 8))
+	if ($smcFunc['strlen']($password) < (empty($modSettings['password_strength']) ? 4 : 8))
 		return 'short';
 
 	// Is this enough?
